--- a/docs/网络安全/端点安全/Windows/提权/本地提权.md
+++ b/docs/网络安全/端点安全/Windows/提权/本地提权.md
@@ -1,12 +1,29 @@
 # Windows 本地提权
 
-- [土豆提权](土豆提权.md)
-- [Pytmipe](#pytmipe)
-- [CVE](#cve)
+- [Windows 本地提权](#windows-本地提权)
+  - [Pytmipe](#pytmipe)
+    - [Main features](#main-features)
+    - [功能](#功能)
+    - [依赖](#依赖)
+    - [使用方法](#使用方法)
+      - [For **python client** (named tmipe)](#for-python-client-named-tmipe)
+      - [For python library (named pytmipe)](#for-python-library-named-pytmipe)
+      - [For pyinstaller **examples** and standalones](#for-pyinstaller-examples-and-standalones)
+    - [示例](#示例)
+      - [示例1-获取 nt authority\\system](#示例1-获取-nt-authoritysystem)
+      - [示例2-获取token](#示例2-获取token)
+      - [示例3-模拟token](#示例3-模拟token)
+      - [示例4-创建并模拟 Token](#示例4-创建并模拟-token)
+  - [CVE](#cve)
+    - [TODO:CVE-2024-35250](#todocve-2024-35250)
+      - [程序编译](#程序编译)
+  - [面试相关](#面试相关)
 
 ---
 
 ## Pytmipe
+
+> [quentinhardy/pytmipe / Github](https://github.com/quentinhardy/pytmipe)
 
 PYTMIPE 是一个通过令牌篡改和伪造实现提权的 Python3 库， 支持在 Windows 系统中实现令牌篡改和模拟，最终实现权限提升
 
@@ -280,6 +297,53 @@ python tmipe.py imptoken --pid 27236 -vv
 ```
 
 ![image-20241206172736929](http://cdn.ayusummer233.top/DailyNotes/202412061727012.png)
+
+---
+
+#### 示例4-创建并模拟 Token
+
+```powershell
+python .\tmipe.py runas --username [username] --password [password]
+```
+
+![image-20241224110127759](http://cdn.ayusummer233.top/DailyNotes/202412241101813.png)
+
+---
+
+![image-20241225095914838](http://cdn.ayusummer233.top/DailyNotes/202412250959957.png)
+
+![image-20241225100059329](http://cdn.ayusummer233.top/DailyNotes/202412251000365.png)
+
+![image-20241225101030205](http://cdn.ayusummer233.top/DailyNotes/202412251010360.png)
+
+> 使用了 Python 的 [ctypes](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 库来调用 Windows API 函数 [CreateProcessWithLogonW](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html)，该函数用于在指定用户的安全上下文中创建一个新进程。
+>
+> 通过 [ctypes.windll.advapi32](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 加载了包含 [CreateProcessWithLogonW](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 函数的 [advapi32](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 动态链接库（DLL），并将该函数赋值给 [CreateProcessWithLogonW](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 变量
+>
+> 接着，设置函数的返回类型为 [BOOL](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html)，这表示函数调用后会返回一个布尔值，指示调用是否成功
+>
+> 然后，定义了 [CreateProcessWithLogonW](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 函数的参数类型。[argtypes](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 属性是一个列表，指定了函数每个参数的类型。这些参数类型对应于 Windows API 中 [CreateProcessWithLogonW](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 函数的签名，包括字符串类型（如 [LPCWSTR](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html)）、整数类型（如 [DWORD](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html)）以及指向结构体的指针（如 [POINTER(STARTUPINFO)](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 和 [POINTER(PROCESS_INFORMATION)](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html)）：
+>
+> ```python
+> CreateProcessWithLogonW.argtypes = [
+>   LPCWSTR,           # 用户名
+>   LPCWSTR,           # 用户域
+>   LPCWSTR,           # 密码
+>   DWORD,            # 标志参数
+>   LPCWSTR,           # 应用程序名称
+>   LPWSTR,            # 命令行
+>   DWORD,            # 创建标志
+>   LPVOID,            # 环境变量
+>   LPCWSTR,           # 当前目录
+>   POINTER(STARTUPINFO),     # 启动信息
+>   POINTER(PROCESS_INFORMATION) # 进程信息
+> ]
+> 
+> ```
+
+![cd220ee656d666f586c718c2cde335f6_720](http://cdn.ayusummer233.top/DailyNotes/202412251021530.png)
+
+![image-20241225102318662](http://cdn.ayusummer233.top/DailyNotes/202412251023785.png)
 
 ---
 
