📝 补充参考链接-python vsc debug file

--- a/docs/Language/Python/开发环境.md
+++ b/docs/Language/Python/开发环境.md
@@ -14,6 +14,7 @@
   - [VSCode](#vscode)
     - [扩展](#扩展)
     - [Pylance 无法加载自定义模块](#pylance-无法加载自定义模块)
+    - [Debug](#debug)
   - [生成环境依赖](#生成环境依赖)
   - [Pycharm](#pycharm)
     - [Pycharm 换源](#pycharm-换源)
@@ -462,6 +463,12 @@ os.system(command)
 然后就可以 Pylance 正常加载相关包了
 
 > 有时候可能仍旧索引不到相关模块, 那么可以将层级写深点, 不止于 `site-packages`, 而是写到模块 py 文件所在目录
+
+---
+
+### Debug
+
+> 参考 [Python debugging in VS Code / code.visualstudio.com](https://code.visualstudio.com/docs/python/debugging#_set-configuration-options)
 
 
 ---
