📝 土豆提权 - Windows 用户权限， Potato 利用前提

--- a/docs/网络安全/端点安全/Windows/提权/土豆提权.md
+++ b/docs/网络安全/端点安全/Windows/提权/土豆提权.md
@@ -2,6 +2,8 @@
 
 - [土豆提权](#土豆提权)
   - [概述](#概述)
+  - [Windows 用户](#windows-用户)
+  - [利用前提](#利用前提)
   - [HotPotato](#hotpotato)
     - [影响范围](#影响范围)
     - [原理](#原理)
@@ -56,6 +58,95 @@
    - **改进点**: 支持 Windows 10 和 Windows Server 2019（部分版本）
    - 增加对不同 COM 接口的利用（例如 PrintNotify）
    - **支持版本**: Windows 10（部分早期版本）Windows Server 2016/2019（特定版本）
+
+---
+
+## Windows 用户
+
+- `Local System - NT AUTHORITY\SYSTEM`：Windows 操作系统中权限最高的内置账户，也称为本地系统账户。它对本地计算机拥有完全的控制权，可以执行任何操作，包括访问系统的所有资源、安装和卸载程序、修改系统设置等。
+
+  通常用于运行系统关键服务和进程，如 Windows 操作系统的核心组件、系统服务等。这些服务需要最高的权限来确保系统的正常运行和稳定性。
+
+- `Network Service - NT AUTHORITY\Network Service`: 该账户是用于运行网络相关服务的内置账户，具有一定的网络访问权限，但权限相对较低。它在网络环境中以匿名身份运行，无法直接访问本地计算机的用户资源。
+
+  主要用于运行一些需要网络访问权限的服务，如 IIS（Internet Information Services）、SQL Server 等。这些服务需要与网络中的其他计算机进行通信，但不需要访问本地用户的敏感信息。
+
+- `Local Service - NT AUTHORITY\Local Service`：此账户是用于运行本地服务的内置账户，具有有限的本地系统权限，无法直接访问网络资源。它主要用于运行一些不需要网络访问权限的本地服务，如 Windows Time 服务、Print Spoofer 服务等。
+
+在实际渗透过程中，拿到 webshell ，用户权限是 IIS 或者 apache，或sqlserver用户执行 xp_cmdshell，此时拿到的服务账户在进行操作时是低权限账户，可以尝试使用提权手法获取更高的权限。
+
+---
+
+## 利用前提
+
+除了 HotPotato 没有权限要求外，利用 Potato 提权的前提是拥有 `SeImpersonatePrivilege（身份验证后模拟客户端）`或 `SeAssignPrimaryTokenPrivilege（替换一个进程级令牌）`权限
+
+以下用户拥有 **SeImpersonatePrivilege** 权限（而只有更高权限的账户比如 SYSTEM 才有 **SeAssignPrimaryTokenPrivilege** 权限）：
+
+- `Administrator(管理Windows计算机的内置管理员账户)`
+
+- ``Local Service 本地服务账户`
+
+- `Network Service 网络服务用户 `
+
+  该用户起的进程有如下这些：
+
+  - WMI
+  - RPC
+
+- `NT AUTHORITY\SYSTEM`
+
+  该用户起的进程有如下这些：
+
+  - 服务控制管理器 SCM 
+  - 打印机服务 Print Spooler
+
+> - `Administrator`
+>
+>   ![企业微信截图_11f20a22-003d-4d63-8978-d623fc983d33](http://cdn.ayusummer233.top/DailyNotes/202412251809218.png)
+>
+> - SCM
+>
+>   ![企业微信截图_20e9b4bb-d969-4907-af51-fd0cc57f66e7](http://cdn.ayusummer233.top/DailyNotes/202412251817435.png)
+>
+> - WMI
+>
+>   ![image-20241225181022364](http://cdn.ayusummer233.top/DailyNotes/202412251810440.png)
+>
+> - RPC（Remote Procedure Call）远程过程调用
+>
+>   RPC 服务通常运行在托管服务的通用 Windows 进程 svchost.exe 中。
+>
+>   `svchost.exe` 是一个系统核心进程，负责托管和运行基于 DLL 的服务。多个服务通常共用同一个 svchost.exe 实例
+>
+>   可以使用 `tasklist /svc` 命令查看每个 `svchost.exe` 实例中托管的服务
+>
+>   ```powershell
+>   tasklist /svc | findstr RpcSs
+>   ```
+>
+>   通过上述命令可以列出 RpcSs 对应的 `svchost.exe`
+>
+>   ![image-20241225182643408](http://cdn.ayusummer233.top/DailyNotes/202412251826485.png)
+>
+> - Print Spooler
+>
+>   ![image-20241225190051695](http://cdn.ayusummer233.top/DailyNotes/202412251900819.png)
+
+PS：本机测试时即使在本地策略中授予管理员组普通用户 SeImpersonatePrivilege 特权，在 cmd.exe 中 whoami /priv 也不显示该特权，且无法利用；而 SeAssignPrimaryTokenPrivilege 特权则可以正常授予普通用户。
+
+查询本地管理员组用户：
+
+```powershell
+Get-LocalGroupMember -Group "Administrators"
+net localgroup Administrators
+```
+
+![image-20241225190447614](http://cdn.ayusummer233.top/DailyNotes/202412251904690.png)
+
+管理员组的 Administrator 用户是内置账户， 权限比组内的其他用户更多
+
+![image-20241225190710009](http://cdn.ayusummer233.top/DailyNotes/202412251907098.png)
 
 
 ---
