--- a/docs/网络安全/端点安全/Windows/提权/土豆提权.md
+++ b/docs/网络安全/端点安全/Windows/提权/土豆提权.md
@@ -81,7 +81,7 @@
 
 除了 HotPotato 没有权限要求外，利用 Potato 提权的前提是拥有 `SeImpersonatePrivilege（身份验证后模拟客户端）`或 `SeAssignPrimaryTokenPrivilege（替换一个进程级令牌）`权限
 
-以下用户拥有 **SeImpersonatePrivilege** 权限（而只有更高权限的账户比如 SYSTEM 才有 **SeAssignPrimaryTokenPrivilege** 权限）：
+以下用户拥有 **SeImpersonatePrivilege（身份验证后模拟客户端）** 权限（而只有更高权限的账户比如 SYSTEM 才有 **SeAssignPrimaryTokenPrivilege（替换一个进程级令牌）** 权限）：
 
 - `Administrator(管理Windows计算机的内置管理员账户)`
 
