--- a/docs/网络安全/端点安全/Windows/提权/本地提权.md
+++ b/docs/网络安全/端点安全/Windows/提权/本地提权.md
@@ -427,13 +427,13 @@ python .\tmipe.py runas --username [username] --password [password]
 
 - [Windows系列本地提权面试相关问题汇总 / freebuf](https://www.freebuf.com/articles/web/335500.html)
 
+---
+
+## 提权速查
 
 
 
-
-
-
-
+---
 
 
 
