📝 macOS VSCode识别不到 poetry 创建的 .venv 虚拟环境的解决方案

--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -31,12 +31,14 @@
       - [基本用法](#基本用法)
         - [安装依赖](#安装依赖)
         - [使用虚拟环境](#使用虚拟环境)
-        - [结合 conda 环境使用](#结合-conda-环境使用)
+          - [结合 conda 环境使用](#结合-conda-环境使用)
           - [在当前 conda 环境的 `bin` 目录中找不到 activate 脚本导致环境激活失败(ubuntu)](#在当前-conda-环境的-bin-目录中找不到-activate-脚本导致环境激活失败ubuntu)
+        - [删除虚拟环境](#删除虚拟环境)
       - [常见问题](#常见问题)
         - [Failed to create the collection: Prompt dismissed..](#failed-to-create-the-collection-prompt-dismissed)
         - [卡 keyring](#卡-keyring)
         - [python 版本不对](#python-版本不对)
+        - [macOS VSCode识别不到 poetry 创建的 .venv 虚拟环境](#macos-vscode识别不到-poetry-创建的-venv-虚拟环境)
     - [PDM](#pdm)
       - [概述](#概述)
       - [主要特性](#主要特性)
@@ -966,6 +968,20 @@ poetry env use python
 ```
 
 ![image-20240507230346854](http://cdn.ayusummer233.top/DailyNotes/202405072303970.png)
+
+---
+
+##### macOS VSCode识别不到 poetry 创建的 .venv 虚拟环境
+
+macOS VSCode 不知道什么原因 poetry 新建的 `.venv` 虚拟环境无法被正确识别，无法在右下角选择 python 解释器弹出的下拉菜单中找到对应的 python 解释器
+
+即便手动选择 python 程序文件也无法正常识别
+
+此时可以使用如下方法来成功配置虚拟环境：
+
+使用 VSCode 打开 `.venv` 所在的目录，此时 `.venv` 直接在当前工作区根目录下 VSCode 可以识别到，在右下角选择 Python 解释器选项中可以选择到虚拟环境
+
+此时再重新打开之前的目录也可以选择到此虚拟环境了
 
 
 ---
