--- a/docs/网络安全/端点安全/Windows/提权/本地提权.md
+++ b/docs/网络安全/端点安全/Windows/提权/本地提权.md
@@ -441,7 +441,7 @@ python .\tmipe.py runas --username [username] --password [password]
 
 ## 提权速查
 
-
+- [Windows&Linux提权&RCE合集](https://github.com/wwl012345/Vuln-List/blob/main/Windows%26Linux%E6%8F%90%E6%9D%83%26RCE%E5%90%88%E9%9B%86.md)
 
 ---
 
