📝 poetry 针对指定指定系统安装指定依赖

--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -846,6 +846,28 @@ url = "http://example.com/simple"
 poetry add numpy
 ```
 
+> 如果依赖有系统区分需求可以加 `marker` 参数进行限定，例如：
+>
+> ```bash
+> # 🪟 为 Windows 添加 pycairo
+> poetry add pycairo --marker "sys_platform == 'win32'"
+> # 🍎 为 macOS 添加 cairocffi
+> poetry add cairocffi --marker "sys_platform == 'darwin'"
+> ```
+>
+> 这样添加后，`pyproject.toml` 中会自动更新为：
+>
+> ```toml
+> [tool.poetry.dependencies]
+> pycairo = { version = "^1.24.0", markers = "sys_platform == 'win32'" }
+> cairocffi = { version = "^1.5.1", markers = "sys_platform == 'darwin'" }
+> ```
+>
+> PS: 
+>
+> - `--marker` 是 `Poetry >=1.2` 的特性，如果你使用较旧版本（比如 1.1.x）可能不支持
+> - 最新的 `Poetry 1.8.x` 也不支持 `--marker`，不过可以通过直接修改 `pyproject.toml` 添加 marker 然后 `poetry lock;poetry install`， 或者直接 `poetry add` 然后修改`pyproject.toml` 添加 marker 之后 `poetry lock;poetry install`
+
 ---
 
 ##### 使用虚拟环境
