--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -866,7 +866,17 @@ poetry add numpy
 > PS: 
 >
 > - `--marker` 是 `Poetry >=1.2` 的特性，如果你使用较旧版本（比如 1.1.x）可能不支持
+>
 > - 最新的 `Poetry 1.8.x` 也不支持 `--marker`，不过可以通过直接修改 `pyproject.toml` 添加 marker 然后 `poetry lock;poetry install`， 或者直接 `poetry add` 然后修改`pyproject.toml` 添加 marker 之后 `poetry lock;poetry install`
+>
+> - `sys_platform` 标识的是操作系统平台类型，而不是具体的处理器架构, "win32" 是标识所有 Windows 平台的标准值，这一惯例始于 Windows 系统主要是 32 位的时代, Python 为了保持向后兼容性和一致性，即使在 64 位 Windows 系统上也继续使用 "win32" 作为平台标识符。
+>
+>   ```python
+>   import sys
+>   print(sys.platform) # 在任何 Windows 系统上都会输出 "win32"
+>   ```
+>
+>   ![image-20250418024801007](http://cdn.ayusummer233.top/DailyNotes/202504180248120.png)
 
 ---
 
