--- a/docs/Language/Python/libs/python-igraph/python-igraph.ipynb
+++ b/docs/Language/Python/libs/python-igraph/python-igraph.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ef029b2e",
    "metadata": {},
    "outputs": [
@@ -214,16 +214,16 @@
     "\n",
     "# 使用igraph自带绘图功能\n",
     "visual_style = {\n",
-    " \"vertex_size\": 45,\n",
-    " \"vertex_label\": g.vs[\"name\"],\n",
-    " \"vertex_label_dist\": 1.5,\n",
-    " \"vertex_label_size\": 12,\n",
-    " \"vertex_color\": g.vs[\"color\"],\n",
-    " \"edge_width\": g.es[\"width\"],\n",
-    " \"edge_label\": [f\"{w:.1f}\" for w in g.es[\"weight\"]],\n",
+    " \"vertex_size\": 45, # 节点大小\n",
+    " \"vertex_label\": g.vs[\"name\"], # 节点标签\n",
+    " \"vertex_label_dist\": 1.5, # 标签距离节点的距离\n",
+    " \"vertex_label_size\": 12, # 标签字体大小\n",
+    " \"vertex_color\": g.vs[\"color\"], # 节点颜色\n",
+    " \"edge_width\": g.es[\"width\"], # 边的宽度\n",
+    " \"edge_label\": [f\"{w:.1f}\" for w in g.es[\"weight\"]], # 边的标签\n",
     " \"layout\": g.layout(\"kk\"),  # Kamada-Kawai布局算法\n",
-    " \"bbox\": (600, 600),\n",
-    " \"margin\": 50,\n",
+    " \"bbox\": (600, 600), # 图像的边界框大小(宽度, 高度)(单位: 像素)\n",
+    " \"margin\": 50, # 图像的边距\n",
     "}\n",
     "\n",
     "# 绘制并保存图像\n",
