📝 使用 Poetry 发布 Python 库

--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -44,6 +44,7 @@ star: true
           - [结合 conda 环境使用](#结合-conda-环境使用)
           - [在当前 conda 环境的 `bin` 目录中找不到 activate 脚本导致环境激活失败(ubuntu)](#在当前-conda-环境的-bin-目录中找不到-activate-脚本导致环境激活失败ubuntu)
         - [删除虚拟环境](#删除虚拟环境)
+      - [管理Python包与发布到PyPi](#管理python包与发布到pypi)
       - [常见问题](#常见问题)
         - [Failed to create the collection: Prompt dismissed..](#failed-to-create-the-collection-prompt-dismissed)
         - [卡 keyring](#卡-keyring)
@@ -939,6 +940,60 @@ poetry env list
 ```bash
 poetry env remove [虚拟环境名称]
 ```
+
+---
+
+#### 管理Python包与发布到PyPi
+
+> [硬核 | 使用Poetry发布Python库到PyPi的方法](https://textdata.cn/blog/2023-03-31-using-poetry-to-manage-your-project-env/)
+
+使用 `poetry new myproject` 创建如下结构的 Python包目录
+
+```
+myproject
+   |--- myproject
+   |    |--- __init__.py
+   |--- tests
+   |    |--- __init__.py
+   |--- README.md
+   |--- pyproject.toml
+```
+
+![image-20250512164906548](http://cdn.ayusummer233.top/DailyNotes/202505121649817.png)
+
+或者自行将当前包按照类似上述结构组织：
+
+![image-20250512165016324](http://cdn.ayusummer233.top/DailyNotes/202505121650441.png)
+
+---
+
+在 [PyPi](https://pypi.org/manage/account/) 创建账户然后创建 API Token：
+
+![image-20250512182736410](http://cdn.ayusummer233.top/DailyNotes/202505121827505.png)
+
+在本地配置 PyPI Token
+
+```bash
+poetry config pypi-token.pypi [刚才创建的PyPI API Token]
+```
+
+![image-20250512182503468](http://cdn.ayusummer233.top/DailyNotes/202505121825661.png)
+
+库编写完成后先构建库：
+
+```bash
+poetry build
+```
+
+![image-20250512212922619](http://cdn.ayusummer233.top/DailyNotes/202505122129829.png)
+
+然后可以发布到 PyPI
+
+```bash
+poetry publish
+```
+
+![image-20250512212942125](http://cdn.ayusummer233.top/DailyNotes/202505122129225.png)
 
 ---
 
