📝 发布 Python 模块到 Git 仓库

--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -44,7 +44,9 @@ star: true
           - [结合 conda 环境使用](#结合-conda-环境使用)
           - [在当前 conda 环境的 `bin` 目录中找不到 activate 脚本导致环境激活失败(ubuntu)](#在当前-conda-环境的-bin-目录中找不到-activate-脚本导致环境激活失败ubuntu)
         - [删除虚拟环境](#删除虚拟环境)
-      - [管理Python包与发布到PyPi](#管理python包与发布到pypi)
+      - [Python包发布分享](#python包发布分享)
+        - [发布到PyPI](#发布到pypi)
+        - [发布到Git仓库](#发布到git仓库)
       - [常见问题](#常见问题)
         - [Failed to create the collection: Prompt dismissed..](#failed-to-create-the-collection-prompt-dismissed)
         - [卡 keyring](#卡-keyring)
@@ -943,7 +945,9 @@ poetry env remove [虚拟环境名称]
 
 ---
 
-#### 管理Python包与发布到PyPi
+#### Python包发布分享
+
+##### 发布到PyPI
 
 > [硬核 | 使用Poetry发布Python库到PyPi的方法](https://textdata.cn/blog/2023-03-31-using-poetry-to-manage-your-project-env/)
 
@@ -994,6 +998,28 @@ poetry publish
 ```
 
 ![image-20250512212942125](http://cdn.ayusummer233.top/DailyNotes/202505122129225.png)
+
+---
+
+##### 发布到Git仓库
+
+对于非公开的库，如何限制环境中没有 PyPI 服务器但是有 Git 仓库管理的话可以将模块推送到 git 仓库来进行分享
+
+这里以 Github 为例：
+
+![image-20250513151616712](http://cdn.ayusummer233.top/DailyNotes/202505131516960.png)
+
+在别处使用时可以这样做：
+
+```bash
+poetry add git+https://github.com/233Official/summer_modules.git
+```
+
+![image-20250513151953813](http://cdn.ayusummer233.top/DailyNotes/202505131519944.png)
+
+正常使用：
+
+![image-20250513152134334](http://cdn.ayusummer233.top/DailyNotes/202505131521446.png)
 
 ---
 
