🎨 目录结构调整

--- a/docs/Language/Python/开发环境.md
+++ b/docs/Language/Python/开发环境.md
@@ -24,8 +24,9 @@ headerDepth: 5
   - [版本管理工具](#版本管理工具)
   - [VSCode](#vscode)
     - [扩展](#扩展)
-    - [Pylance 无法加载自定义模块](#pylance-无法加载自定义模块)
-    - [Debug](#debug)
+      - [Debug](#debug)
+    - [常见问题](#常见问题)
+      - [Pylance 无法加载自定义模块](#pylance-无法加载自定义模块)
   - [生成环境依赖](#生成环境依赖)
   - [Pycharm](#pycharm)
     - [Pycharm 换源](#pycharm-换源)
@@ -451,9 +452,18 @@ os.system(command)
 
   ![image-20220113134623777](http://cdn.ayusummer233.top/img/202201131346049.png)
   
-  ---
+----
 
-### Pylance 无法加载自定义模块
+#### Debug
+
+> 参考 [Python debugging in VS Code / code.visualstudio.com](https://code.visualstudio.com/docs/python/debugging#_set-configuration-options)
+
+
+---
+
+### 常见问题
+
+#### Pylance 无法加载自定义模块
 
 有时 Pylance 可能会识别不了 import 导入的自定义包, 此时需要设置 VScode Pylance 的 `python.analysis.extraPaths` 属性, 加上自定义包的所在目录
 
@@ -477,12 +487,8 @@ os.system(command)
 
 ---
 
-### Debug
-
-> 参考 [Python debugging in VS Code / code.visualstudio.com](https://code.visualstudio.com/docs/python/debugging#_set-configuration-options)
-
-
 ---
+
 ## 生成环境依赖
 
 > [python 项目自动生成环境配置文件requirements.txt_凝眸伏笔的博客-CSDN博客](https://blog.csdn.net/pearl8899/article/details/113877334)
