--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -728,7 +728,7 @@ poetry --version
 
 > Windows 推荐使用 pipx 的方式安装
 >
-> kali 不建议使用此种方式安装
+> kali, macOS 不建议使用此种方式安装
 
 安装 pipx(需要 pip 19.0 及以上版本)
 
@@ -757,6 +757,10 @@ pipx install poetry
 ![image-20240319114404568](http://cdn.ayusummer233.top/DailyNotes/202403191144311.png)
 
 ---
+
+@tab macOS
+
+macOS 请使用 `curl -sSL https://install.python-poetry.org | python3 -` 安装 poetry, 不要使用 pipx 以及 brew 安装
 
 :::
 
@@ -942,6 +946,26 @@ poetry env list
 ```bash
 poetry env remove [虚拟环境名称]
 ```
+
+---
+
+##### 导出依赖到 requirements.txt
+
+当需要将项目打包到 docker 中使用时一般就直接用 docker 中自带的 python 了, 不再需要使用 poetry 创建虚拟环境管理 python 版本依赖, 此时就需要生成一个给 pip install 安装依赖使用的 requirements.txt
+
+对于 poetry 1.x 而言可以直接使用如下命令导出依赖:
+
+```bash
+poetry export -f requirements.txt --output xxx/xxx/requirements.txt --without-hashes
+```
+
+对于 poetry 2.x 而言, 很多功能都拆分为了独立的模块, 包括 export 也是, 需要先安装 poetry export 才能运行上述命令
+
+```bash
+poetry self add poetry-plugin-export
+```
+
+![image-20250605170338962](http://cdn.ayusummer233.top/DailyNotes/202506051703254.png)
 
 ---
 
