📝 Linux 从源码安装 Python

--- a/docs/Language/Python/开发环境.md
+++ b/docs/Language/Python/开发环境.md
@@ -132,8 +132,6 @@ pip -V
 python3 -V
 ```
 
-
-
 - 修改默认 Python 版本
 
   > [【Python】Ubuntu修改默认Python版本_remo0x的博客-CSDN博客_ubuntu更改默认python版本](https://blog.csdn.net/White_Idiot/article/details/78240298)
@@ -146,6 +144,32 @@ python3 -V
   # 添加新的软链接
   ln -s /root/anaconda3/envs/py310/bin/python /usr/bin/python3
   ```
+
+---
+
+从源码安装:
+
+```bash
+# 安装依赖工具
+sudo apt update
+sudo apt install -y make build-essential libssl-dev zlib1g-dev \
+libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm \
+libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev \
+libffi-dev liblzma-dev
+
+# 下载 Python 3.13 源码
+cd /usr/src
+wget https://www.python.org/ftp/python/3.13.5/Python-3.13.5.tgz
+sudo tar -xf Python-3.13.5.tgz
+cd Python-3.13.5
+
+# 编译安装
+sudo ./configure --enable-optimizations
+sudo make -j$(nproc)  # 多核编译加速
+sudo make altinstall   # 使用 altinstall 避免覆盖系统默认的 python3
+```
+
+> ⚠️ 注意：一定使用 make altinstall 而不是 make install，否则会破坏系统依赖的 python3.10。
 
 
 :::
