--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -1,5 +1,4 @@
 ---
-
 category: Python
 tags:
   - Python
@@ -32,18 +31,22 @@ star: true
     - [Linux-update-alternatives](#linux-update-alternatives)
   - [Python依赖版本管理工具](#python依赖版本管理工具)
     - [virtual environment](#virtual-environment)
+    - [uv](#uv)
+      - [安装](#安装-2)
+      - [基本用法](#基本用法)
     - [Pipenv](#pipenv)
     - [Poetry](#poetry)
       - [系统需求](#系统需求)
-      - [安装](#安装-2)
+      - [安装](#安装-3)
       - [配置文件](#配置文件)
         - [pyproject.toml](#pyprojecttoml)
-      - [基本用法](#基本用法)
+      - [基本用法](#基本用法-1)
         - [安装依赖](#安装依赖)
         - [使用虚拟环境](#使用虚拟环境)
           - [结合 conda 环境使用](#结合-conda-环境使用)
           - [在当前 conda 环境的 `bin` 目录中找不到 activate 脚本导致环境激活失败(ubuntu)](#在当前-conda-环境的-bin-目录中找不到-activate-脚本导致环境激活失败ubuntu)
         - [删除虚拟环境](#删除虚拟环境)
+        - [导出依赖到 requirements.txt](#导出依赖到-requirementstxt)
       - [Python包发布分享](#python包发布分享)
         - [发布到PyPI](#发布到pypi)
         - [发布到Git仓库](#发布到git仓库)
@@ -56,13 +59,13 @@ star: true
       - [概述](#概述)
       - [主要特性](#主要特性)
       - [为什么不用虚拟环境](#为什么不用虚拟环境)
-      - [安装](#安装-3)
+      - [安装](#安装-4)
       - [QuickStart](#quickstart)
       - [working with PEP 582](#working-with-pep-582)
       - [PDM Scripts](#pdm-scripts)
       - [PDM-packer](#pdm-packer)
     - [pipx](#pipx)
-      - [安装](#安装-4)
+      - [安装](#安装-5)
       - [概述](#概述-1)
       - [pipx 与 pip 的区别](#pipx-与-pip-的区别)
       - [pipx 从什么地方安装 app](#pipx-从什么地方安装-app)
@@ -530,6 +533,115 @@ source env/bin/activate
 > - 在 Linux 中对应的即为 `/usr/bin/python` 符号链接指向的 python 程序, linux 中要修改的话修改相应 `/usr/bin/pythonxx` 符号链接对应的 python 程序路径即可
 >
 >   ![image-20231109145155632](http://cdn.ayusummer233.top/DailyNotes/202311091451909.png)
+
+---
+
+### uv
+
+> [github.com/astral-sh/uv](https://github.com/astral-sh/uv)
+>
+> [docs.astral.sh/uv/](https://docs.astral.sh/uv/)
+
+uv 是一个用 Rust 编写的极快的 Python 包和项目管理器。
+
+![image-20250929103701319](http://cdn.ayusummer233.top/DailyNotes/202509291037605.png)
+
+亮点
+
+- 🚀 一个工具即可替代 `pip` 、 `pip-tools` 、 `pipx` 、 `poetry` 、 `pyenv` 、 `twine` 、 `virtualenv` 等。
+- ⚡️ 比 `pip`[ 快 10-100 倍 ](https://github.com/astral-sh/uv/blob/main/BENCHMARKS.md)。
+
+---
+
+#### 安装
+
+:::tabs
+
+@active: macOS/Linux
+
+```bash
+curl -LsSf https://astral.sh/uv/install.sh | sh
+# 验证安装
+uv --version
+```
+
+![image-20250929104234071](http://cdn.ayusummer233.top/DailyNotes/202509291042243.png)
+
+@Windows
+
+```powershell
+powershell -ExecutionPolicy ByPass -c "irm https://astral.sh/uv/install.ps1 | iex"
+```
+
+:::
+
+---
+
+#### 基本用法
+
+```bash
+# 初始化当前项目
+uv init
+# 添加包
+uv add ruff
+# 运行检查(不会自动安装缺失的包)
+uv run ruff check
+# 锁定依赖(更新 uv.lock 文件)
+uv lock
+# 同步依赖(会自动安装缺失的包)
+uv sync
+# 移除指定包
+uv remove ruff
+
+# 根据需要下载 Python 版本：
+uv venv --python 3.12.0
+uv run --python pypy@3.8 -- python
+
+# 在当前目录中使用特定的 Python 版本：
+uv python pin 3.11
+
+# 创建虚拟环境：
+uv venv
+
+# 安装锁定的依赖：
+uv pip sync docs/requirements.txt
+```
+
+```bash
+➜  Kira git:(main) uv init
+Initialized project `kira`
+➜  Kira git:(main) ✗ uv add ruff
+Using CPython 3.13.3 interpreter at: /Library/Frameworks/Python.framework/Versions/3.13/bin/python3.13
+Creating virtual environment at: .venv
+Resolved 2 packages in 1.07s
+Prepared 1 package in 5.61s
+░░░░░░░░░░░░░░░░░░░░ [0/1] Installing wheels...                                               warning: Failed to clone files; falling back to full copy. This may lead to degraded performance.
+         If the cache and target directories are on different filesystems, reflinking may not be supported.
+         If this is intentional, set `export UV_LINK_MODE=copy` or use `--link-mode=copy` to suppress this warning.
+Installed 1 package in 33ms
+ + ruff==0.13.2
+➜  Kira git:(main) ✗ uv run ruff check
+All checks passed!
+➜  Kira git:(main) ✗ uv lock
+Resolved 2 packages in 7ms
+➜  Kira git:(main) ✗ uv lock
+Resolved 2 packages in 6ms
+➜  Kira git:(main) ✗ uv sync
+Resolved 2 packages in 7ms
+Audited 1 package in 3ms
+➜  Kira git:(main) ✗ 
+```
+
+> - warning: Failed to clone files... 这是指尝试用“复制时硬链接/写时复制（reflink 或硬链接）”优化缓存到目标目录的操作失败，回退为普通文件复制。常见原因：
+>   - 缓存目录与项目目录位于不同文件系统 / 卷（特别是 OneDrive、外接盘、网络卷）
+>   - 文件系统不支持 reflink 或硬链接语义
+>     影响：仅是性能（多耗一点 I/O），不影响功能或正确性。
+>     若你经常看到且确定总是跨卷，可：
+>   - 临时：uv add ruff --link-mode=copy
+>   - 全局：export UV_LINK_MODE=copy（放入 shell 配置）
+> - Installed 1 package in 33ms 表示最终成功安装 ruff==0.13.2。
+
+
 
 ---
 
