📝 修复错误的 tab 显示

--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -557,7 +557,7 @@ uv 是一个用 Rust 编写的极快的 Python 包和项目管理器。
 
 :::tabs
 
-@active: macOS/Linux
+@tab:active macOS/Linux
 
 ```bash
 curl -LsSf https://astral.sh/uv/install.sh | sh
@@ -567,7 +567,7 @@ uv --version
 
 ![image-20250929104234071](http://cdn.ayusummer233.top/DailyNotes/202509291042243.png)
 
-@Windows
+@tab Windows
 
 ```powershell
 powershell -ExecutionPolicy ByPass -c "irm https://astral.sh/uv/install.ps1 | iex"
