--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -571,7 +571,11 @@ uv --version
 
 ```powershell
 powershell -ExecutionPolicy ByPass -c "irm https://astral.sh/uv/install.ps1 | iex"
+# 验证安装
+uv --version
 ```
+
+![image-20251003192732297](http://cdn.ayusummer233.top/DailyNotes/202510031927611.png)
 
 :::
 
